--- a/app/templates/my-form.html
+++ b/app/templates/my-form.html
@@ -8,10 +8,10 @@
 	    <h3>Flask|Python|Psycopg2|PostgreSQL</h3>
 
 	    <h4>Example 1</h4>
-        <form action="/venue-handler" method="POST">
+        <form action="/make-handler" method="POST">
             <div>
-                Find all the events at this venue_id
-                <input type="text" name="venue_id">
+                Find all the vehicles with this make
+                <input type="text" name="make">
             </div>
                 <input type="submit" value="Submit">
         </form>
