--- a/app/templates/my-result.html
+++ b/app/templates/my-result.html
@@ -24,7 +24,15 @@
 
     <body>
         <table>
+            <thead>
+                <tr>
+                {%for head in heads%}
+                    <th>{{head}}</th>
+                {%endfor%}
+                </tr>
+            </thead>
             <!-- nested for loops in jinja template -->
+            <tbody>
             {%for row in rows%}
                 <tr>
                 {%for col in row%}
@@ -32,6 +40,7 @@
                 {%endfor%}
                 </tr>
             {%endfor%}
+            </tbody>
         </table>
     </body>
 </html>
