Added navigaiton functionality

--- a/app/templates/my-form.html
+++ b/app/templates/my-form.html
@@ -5,7 +5,7 @@
         <title>Vehicle Fleet Database</title>
     </head>
     <body>
-
+        <a href = about-page>About page</a>
 	    <h4>Choose a Vehicle Make</h4>
         <form action="/make-handler" method="POST">
             <div>
