all html changes

--- a/app/templates/about-page.html
+++ b/app/templates/about-page.html
@@ -1,9 +1,68 @@
 <html>
     <head>
-        <title>About</title>
+        <title>About Page</title>
+        <link rel = "stylesheet" type = "text/css" href = "{{url_for('static', filename = 'style.css')}}">
+
     </head>
-    <body>
-        <a href = '/''>Back to analysis page</a>
+    <body text = "white">
+        
         <h4>About page</h4>
+        <p>
+            <b><u>
+                <br>
+                Internal Combustion Engines(ICE) 
+            </b></u>
+        </p>
+
+        <p>
+            <b>Pros of ICE:</b>
+                <li>The size of engine is very less compared to external combustion engines</li>
+                <li>The power to weight ratio is low</li>
+                <li>These engines are suitable for small power requirement applications</li>
+                <li>Internal Combustion Engines are usualy more portable that their counterpart external combustion engines</li>
+                <li>Safer to operate</li>
+                <li>The starting time is less</li>
+                <li>Requires less maintenance</li>
+            <br>
+            <br>
+            <b>Cons of ICE:</b>
+                <li>Fuel used is expensive like gasoline or diesel</li>
+                <li>Not suitable for large scale power generation</li>
+                <li>Engine emissions are higher compared to external combustion engines</li>
+                <li>The variety of fuels that can be used is limited to fine quality gaseous and liquid fuel</li>
+            <br>
+            <br>  
+
+        </p>
+
+        <p>
+            <b><u>
+                Electric Motors 
+            </b></u>
+        </p>
+
+        <p>
+            <b>Pros of Electric Engines:</b>
+                <li>The initial cost of an electric motor is lower than a fossil-fuel engine</li>
+                <li>They have few moving parts which results in a longer lifespan</li>
+                <li>Electric engines require minimal mantenance service</li>
+                <li>These motors don't require fuel, so there is no engine oil maintenance or battery service</li>
+                <li>They are highly efficient</li>
+                <li>They do not freeze in sub-zerio temperatures</li>
+
+            <br>
+            <br>
+            <b>Cons of Electric Motors:</b>
+                <li>Large electric mtors are not easily portable</li>
+                <li>Sometimes expensive line extensions are needed in remote locations where existing electrical power is not available</li>
+                <li>There can be higher cost per hour of operation if a horsepower motor and low load factor is used</li>
+            <br>
+            <br>    
+
+        </p>
+
+        <a href = '/'>Back to analysis page</a>
+        
+        
     </body>
 </html>
