--- a/app/templates/my-result.html
+++ b/app/templates/my-result.html
@@ -3,27 +3,61 @@
 <html>
     <head>
         <title>Flask result table using nested for loops</title>
+        <!--<link rel = "stylesheet" href = "style.css">-->
+        <link rel = "stylesheet" type = "text/css" href = "{{url_for('static', filename = 'abtstyle.css')}}">
+
     </head>
 
     <!-- Add some style to table (OPTIONAL) -->
     <style type="text/css">
+        .content-table {
+            border-collapse: collapse;
+            margin: 25px 0;
+            font-size: 0.9em;
+            min-width: 400px;
+            
+        }
 
-    th:tr{
-        color: blue;
-    }
-    tr:nth-of-type(2n){
-        border: 1px solid black;
-        background-color: rgba(150, 150, 150, 0.5);
-    }
+        .content-table thead tr{
+            background-color: #009879;
+            color: #070606;
+            text-align: left;
+            font-weight: bold;
+        }
 
-    td{
-        padding: 8px 8px;
-        border: 1px solid black;
-    }
+        .content-table th,
+        .content-table td{
+            padding: 12px 15px;
+            border-color: #070606;
+        }
+
+        .content-table tbody tr{
+            border-bottom: 1px solid #bde7e7;
+            border-color: #070606;
+        }
+
+        .content-table tbody tr:nth-of-type(even){
+            background-color: #f3f3f3;
+            border-color: #070606;
+        }
+
+        .content-table tbody tr:last-of-type{
+            border-bottom: 2px solid #009879;
+        }
+
+        td{
+            padding: 8px 8px;
+            border: 1px solid black;
+        }
+        th{
+            padding: 8px 8px;
+            border: 1px solid black;
+        }
+    
     </style>
 
-    <body>
-        <table>
+    <body bgcolor = "bg.jpg">
+        <table class = "content-table" width = "1000">
             <thead>
                 <tr>
                 {%for head in heads%}
