--- a/app/templates/about-page.html
+++ b/app/templates/about-page.html
@@ -5,8 +5,14 @@
 
     </head>
     <body text = "white">
-        
-        <h4>About page</h4>
+        <div class = "menu-bar">
+            <ul> 
+                <li ><a href = '/'>Analyze</a></li>
+                
+                <li class = "active"><a href = about-page>About</a></li>
+                
+            </ul>
+            </div>
         <p>
             <b><u>
                 <br>
@@ -61,7 +67,7 @@
 
         </p>
 
-        <a href = '/'>Back to analysis page</a>
+        
         
         
     </body>
